Initial commit: Asterisk configuration files

--- a/extensions.conf
+++ b/extensions.conf
@@ -1,5 +1,4 @@
 [from-internal]
-
 ;テスト用の記述
 exten => 123,1,NoOp(Testing CDR Functions)
 same => n,Set(CDR_PROP(userfield)=cdr-test)
@@ -12,54 +11,57 @@ same => n,Wait(5)
 same => n,Hangup()
 
 ; 内線（6000-6999）への発信処理
-exten => _6XXX,1,NoOp(Internal call to ${EXTEN}) ; _6XXXは6で始まる4桁の番号にマッチするパターン
-same => n,Set(CDR(unanswered)=yes)               ; 不在着信を記録するように設定
-same => n,Set(CDR(userfield)=internal_call)      ; オプション：通話種別を記録
+exten => _6XXX,1,NoOp(Internal call to ${EXTEN})
+same => n,Set(CDR(unanswered)=yes)
+same => n,Set(CDR(userfield)=internal_call)
 
 ; 発信者（caller）の情報をデータベースから取得
-; データベースから発信者の名前を取得し、取得できない場合は"Unknown"を設定
 same => n,Set(caller_name=${ODBC_GET_USER_NAME(${CALLERID(num)})})
 same => n,Set(caller_name=${IF($[${LEN(${caller_name})} = 0]?Unknown:${caller_name})})
-
-; データベースから発信者の部署を取得し、取得できない場合は"Unknown"を設定
 same => n,Set(caller_dept=${ODBC_GET_USER_DEPARTMENT(${CALLERID(num)})})
 same => n,Set(caller_dept=${IF($[${LEN(${caller_dept})} = 0]?Unknown:${caller_dept})})
-
-; データベースから発信者の役職を取得し、取得できない場合は空文字を設定
 same => n,Set(caller_pos=${ODBC_GET_USER_POSITION(${CALLERID(num)})})
-same => n,Set(caller_pos=${IF($[${LEN(${caller_pos})} = 0]?:${caller_pos})})
+same => n,Set(caller_pos=${IF($[${LEN(${caller_pos})} = 0]?Unknown:${caller_pos})})
 
 ; 着信者（callee）の情報をデータベースから取得
-same => n,Set(callee_name=${ODBC_GET_USER_NAME(${EXTEN})})       ; データベースから着信者の名前を取得; データベースから着信者の名前を取得
-same => n,Set(callee_dept=${ODBC_GET_USER_DEPARTMENT(${EXTEN})}) ; データベースから着信者の部署を取得
+same => n,Set(callee_name=${ODBC_GET_USER_NAME(${EXTEN})})
+same => n,Set(callee_dept=${ODBC_GET_USER_DEPARTMENT(${EXTEN})})
 
 ; 発信者情報の表示形式を設定
 same => n,Set(CALLERID(name)=${caller_name} - ${caller_dept}${caller_pos})
 
 ; デバッグ用のログ出力
-; 発信者と着信者の情報をAsteriskのコンソールに出力
 same => n,NoOp(Calling from: ${caller_name} (${caller_dept}) to ${callee_name} (${callee_dept}))
 
+; 転送機能の設定
+same => n,Set(__DYNAMIC_FEATURES=blindxfer)          ; 動的フィーチャーを有効化
+same => n,Set(TRANSFER_CONTEXT=from-internal)        ; 転送コンテキストの設定
+
 ; 通話の実行
-; PJSIPで指定された内線に発信。タイムアウトは30秒、rオプションで呼び出し音を鳴らす
-same => n,Dial(PJSIP/${EXTEN},30,r)
+same => n,Dial(PJSIP/${EXTEN},30,TtK)              ; K:パーク許可、T:転送機能有効、t:転送許可
 same => n,Hangup()
+
 
 ; ボイスメール確認用の設定（内線800）
 exten => 800,1,Answer()
-same => n,VoiceMailMain(${CALLERID(num)}@default,s) ; ボイスメールメニューを開始。sオプションでパスワードスキップ
+same => n,VoiceMailMain(${CALLERID(num)}@default,s)
 same => n,Hangup()
 
-; 外線発信の設定                                  ; _X.は任意の桁数の数字にマッチするパターン
-exten => _X.,1,Set(CALLERID(num)=05054435266)    ; 発信時の電話番号を設定
-same => n,Set(CALLERID(name)=05054435266)        ; 発信時の表示名を設定
-same => n,Dial(PJSIP/${EXTEN}@hikari-trunk,30,r) ; hikari-trunkを使用して外線に発信
+; 外線発信の設定
+exten => _X.,1,Set(CALLERID(num)=05054435266)
+same => n,Set(CALLERID(name)=05054435266)
+same => n,Set(FEATURE(blindxfer)=#1)
+same => n,Set(TRANSFER_CONTEXT=from-internal)
+same => n,Set(FEATUREMAP(blindxfer)=#1)
+same => n,Dial(PJSIP/${EXTEN}@hikari-trunk,30,RTK)
 same => n,Hangup()
 
-; 外線着信の設定
 [from-trunk]
-exten => 05054435266,1,NoOp(Incoming call to ${EXTEN}) ; 特定の電話番号への着信処理
-same => n,Set(CALLERID(num)=${CALLERID(num)})          ; 着信時の発信者番号を保持
-same => n,Set(CALLERID(name)=${CALLERID(name)})        ; 着信時の発信者名を保持
-same => n,Dial(PJSIP/6001&PJSIP/6002,30,r)             ; 内線6001と6002を30秒間同時に呼び出し
-same => n,VoiceMail(6001@default&6002@default,u)       ; 応答がない場合は両方の内線のボイスメールに転送（uは未応答時）
+exten => 05054435266,1,NoOp(Incoming call to ${EXTEN})
+same => n,Set(CALLERID(num)=${CALLERID(num)})
+same => n,Set(CALLERID(name)=${CALLERID(name)})
+same => n,Set(FEATURE(blindxfer)=#1)
+same => n,Set(TRANSFER_CONTEXT=from-internal)
+same => n,Set(FEATUREMAP(blindxfer)=#1)
+same => n,Dial(PJSIP/6001&PJSIP/6002,30,RTK)
+same => n,VoiceMail(6001@default&6002@default,u)
