--- a/logger.conf
+++ b/logger.conf
@@ -2,8 +2,7 @@
 
 [logfiles]
 
-console = verbose,notice,warning,error,debug
-
-;messages = notice,warning,error
+console = verbose,notice,warning,error
+messages = notice,warning,error,dtmf
 ;full = verbose,notice,warning,error,debug
 ;security = security
