--- a/modules.conf
+++ b/modules.conf
@@ -3,12 +3,16 @@ autoload = yes ;MySQLモジュールを自動的にロード
 
 ; 明示的にロードするモジュール
 preload => pbx_config.so  ; 最初にロード
+load => bridge_builtin_features.so
+load => features.so
 load => res_pjsip.so
 load => chan_pjsip.so
 load => res_odbc.so
 load => res_config_odbc.so
 load => func_odbc.so
 load => cdr_adaptive_odbc.so
+load => res_http_websocket.so
+load => res_pjsip_transport_websocket.so
 noload => cdr_mysql.so
 
 ; 無効化するモジュール
