--- a/pjsip.conf
+++ b/pjsip.conf
@@ -1,6 +1,7 @@
 [global]
 type=global
 endpoint_identifier_order=auth,username,ip
+auth_cache_ttl=300
 
 ;内線の設定
 [transport-udp]
@@ -54,3 +55,37 @@ from_domain=20.27.48.19  ; サーバのIPアドレス
 type=identify
 endpoint=hikari-trunk
 match=20.27.48.19  ; サーバのIPアドレス
+
+[transport-ws]
+type=transport
+protocol=ws
+bind=0.0.0.0:8088
+allow_reload=yes
+
+[6000]
+type=endpoint
+context=from-internal
+disallow=all
+allow=opus,ulaw,alaw
+auth=6000
+aors=6000
+transport=transport-ws
+webrtc=yes
+use_avpf=yes
+ice_support=yes
+rtcp_mux=yes
+dtls_verify=fingerprint
+dtls_setup=actpass
+media_encryption=dtls
+direct_media=no
+force_avp=yes
+
+[6000]
+type=auth               ; 認証設定
+auth_type=userpass
+password=your_password  ; パスワード
+username=6000           ; ユーザー名
+
+[6000]
+type=aor
+max_contacts=1
